<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="number1">Number1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="division">/</string>
    <string name="product">x</string>
    <string name="number2">Number2</string>
    <string name="badinput">Invalid number... Try again!</string>
    <string name="divzero">Cannot divide by zero!</string>
    <string name="result">Result = %.2f</string>
    <string name="menu_item_2">Second menu item</string>
    <string name="menu_item_1">First menu item</string>
</resources>
